--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://github.io/Quberman/goit-js-hw-10-food-service",
+"homepage": "https://quberman.github.io/goit-js-hw-10-food-service",
   "scripts": {
     "dev": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-10-food-service/"
@@ -13,7 +13,7 @@
     "url": "git+https://github.com/goitacademy/goit-js-hw-10-food-service.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Aleksey <onery1176@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/goitacademy/goit-js-hw-10-food-service/issues"
